force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__ContentDocument_OwnerId_map_User_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentDocument_OwnerId_map_User_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContentDocument_OwnerId_map_User_Id_N_1</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ContentDocument_OwnerId_map_User_Id_N_1</relationshipLabel>
    <relationshipName>ContentDocument_OwnerId_map_User_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>