force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__ContentModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentModifiedDateTime__c</fullName>
    <label>Content Modified DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentModifiedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>