force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__ContentSizeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentSizeNumber__c</fullName>
    <label>Content Size</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentSizeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>