force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__ExternalRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalRecordId__c</fullName>
    <label>External Record Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>