force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__IsArchived__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Archived</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsArchived</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>