force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__LastViewedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastViewedDateTime__c</fullName>
    <label>Last Viewed DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastViewedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>