force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__rel_1724325745080_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724325745080_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContentDocument_LatestPublishedVersi_rel</label>
    <referenceTo>ssot__ContentDocumentVersion__dlm</referenceTo>
    <relationshipLabel>ContentDocument_LatestPublishedVersi_rel</relationshipLabel>
    <relationshipName>rel_1724325745080_end</relationshipName>
    <type>Lookup</type>
</CustomField>