force-app/main/default/objects/ssot__ContentDocument__dlm/fields/ssot__rel_1724325771478_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724325771478_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContentDocument_LastModifiedById_map_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ContentDocument_LastModifiedById_map_rel</relationshipLabel>
    <relationshipName>rel_1724325771478_end</relationshipName>
    <type>Lookup</type>
</CustomField>